Did:
    - Store WIP state of menu buttons. Want to figure out proper state management first before implementing.
    - Rename function
    - Lazy refactor into presentation-domain-data structure -> moved everything that wasn't presentation into domain layer, as we have no real data yet.
    - Following Tutorial: Temporarily use voyager nav.
    - Following Tutorial: Add ToDoTask to data layer.

12-12-2024
Streak: 1
Learned:
Did:
    - Reinvent the wheel and make a custom data class for maps that have a fixed order

10-12-2024
Streak: 2
Learned:
Did:
    - Add custom floating action buttons that do allow you to change alignment of content - based on existing compose fabs.
    - Make ChecklistSubMenu use the new fabs
    - Refactor SubTaskList to not unnecessarily go from immutable to mutable values, add skip icon.
    - Fix icon colours, fix cosmeticism icon size.

9-12-2024
Streak: 1
Learned:
Did:
    - Rename ChecklistButton, MainTaskButton and SubTaskButton to make their function & relations clearer.
    - Make MainTaskButton use Strings instead of StringResources (necessary if we want user input customisation).
    - Rename ChiaroscuroDrawable to just Chiaroscuro, add getPainter method as well as getDrawable. Apply Linting.

6-12-2024
Streak: 2
Learned:
Did:
    - Fix icon (xml) for Cosmeticism button. Colours are hardcoded, but same is true for pngs. Confirmed working on iOS.
    - Start prototyping a ChecklistSubMenu composable for the DayPartMenu buttons.
    - WIP: Further implement subtask list for DayPartMenuButtons

5-12-2024
Streak: 1
Learned:
Did:
    - Add inverted colour icons for all png icons
    - Globally set DarkTheme for the app through CompositionLocal, instead of in multiple places
    - Add reusable ChiaroscuroDrawable which returns a drawable resource based on whether dark theme is active
    - Make morning menu buttons use ChiaroscuroDrawable

28-11-2024
Streak: 1
Learned:
Did: