@@ -10,6 +10,7 @@ Did:
     - Lazy refactor into presentation-domain-data structure -> moved everything that wasn't presentation into domain layer, as we have no real data yet.
     - Following Tutorial: Temporarily use voyager nav.
     - Following Tutorial: Add ToDoTask to data layer.
+    - Got to end of section "Collection Setup" from the tutorial video, but should follow the video describing RequestState in more detail before continuing
 
 12-12-2024
 Streak: 1
